--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/slick/slick.css">
-    <link rel="stylesheet" href="assets/slick/slick-theme.css">
+    <link rel="stylesheet" href="iou-placeholder/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="iou-placeholder/assets/slick/slick.css">
+    <link rel="stylesheet" href="iou-placeholder/assets/slick/slick-theme.css">
     <!-- icon css-->
-    <link rel="stylesheet" href="assets/elagent-icon/style.css">
-    <link rel="stylesheet" href="assets/niceselectpicker/nice-select.css">
-    <link rel="stylesheet" href="assets/animation/animate.css">
-    <link rel="stylesheet" href="assets/mcustomscrollbar/jquery.mCustomScrollbar.min.css">
-    <link rel="stylesheet" href="css/style-main.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <title>Docy</title>
+    <link rel="stylesheet" href="iou-placeholder/assets/elagent-icon/style.css">
+    <link rel="stylesheet" href="iou-placeholder/assets/niceselectpicker/nice-select.css">
+    <link rel="stylesheet" href="iou-placeholder/assets/animation/animate.css">
+    <link rel="stylesheet" href="iou-placeholder/assets/mcustomscrollbar/jquery.mCustomScrollbar.min.css">
+    <link rel="stylesheet" href="iou-placeholder/css/style-main.css">
+    <link rel="stylesheet" href="iou-placeholder/css/responsive.css">
+    <title>IOU Documentation || 2024</title>
 </head>
 
 <body data-scroll-animation="true">
@@ -27,10 +27,10 @@
                 <div class="spinner"></div>
                 <div class="text">
                     <img src="img/spinner_logo.png" alt="">
-                    <h4><span>Doc</span>y</h4>
+                    <h4><span>IOU</span></h4>
                 </div>
             </div>
-            <h2 class="head">Did You Know?</h2>
+            <h2 class="head">Documentaion</h2>
             <p></p>
         </div>
     </div>
@@ -828,18 +828,18 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="assets/bootstrap/js/popper.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="js/pre-loader.js"></script>
-    <script src="assets/slick/slick.min.js"></script>
-    <script src="js/jquery.parallax-scroll.js"></script>
-    <script src="assets/niceselectpicker/jquery.nice-select.min.js"></script>
-    <script src="assets/wow/wow.min.js"></script>
-    <script src="assets/mcustomscrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="assets/magnify-pop/jquery.magnific-popup.min.js"></script>
-    <script src="js/plugins.js"></script>
+    <script src="iou-placeholder/js/jquery-3.5.1.min.js"></script>
+    <script src="iou-placeholder/assets/bootstrap/js/popper.min.js"></script>
+    <script src="iou-placeholder/assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="iou-placeholder/js/pre-loader.js"></script>
+    <script src="iou-placeholder/assets/slick/slick.min.js"></script>
+    <script src="iou-placeholder/js/jquery.parallax-scroll.js"></script>
+    <script src="iou-placeholder/assets/niceselectpicker/jquery.nice-select.min.js"></script>
+    <script src="iou-placeholder/assets/wow/wow.min.js"></script>
+    <script src="iou-placeholder/assets/mcustomscrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="iou-placeholder/assets/magnify-pop/jquery.magnific-popup.min.js"></script>
+    <script src="iou-placeholder/js/plugins.js"></script>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-    <script src="js/main.js"></script>
+    <script src="iou-placeholder/js/main.js"></script>
 </body>
 </html>
